// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChallengeSuccessScreen should render minutes as expected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeSuccessScreen
    copy={
      Object {
        "ctaLabel": "",
        "footer": "",
      }
    }
    onPressCta={[MockFunction]}
    rating={2}
    reward={2}
    score={360}
    unit="minutes"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Stars
          isLeftHighlighted={true}
          isMidHighlighted={true}
          isRightHighlighted={false}
        />,
        <View
          style={
            Object {
              "alignItems": "center",
              "marginBottom": 40,
              "width": 274,
            }
          }
        >
          <View
            style={
              Object {
                "bottom": 6,
                "left": 0,
                "overflow": "visible",
                "position": "absolute",
                "right": 0,
              }
            }
          >
            <LevelLine
              colour="rgb(251, 207, 39)"
            />
          </View>
          <YuText
            style={
              Object {
                "color": "rgb(168, 105, 22)",
                "fontSize": 28,
                "marginTop": -20,
                "textAlign": "center",
              }
            }
          >
            level undefined
          </YuText>
        </View>,
        <View>
          <View
            style={
              Object {
                "alignItems": "center",
                "marginBottom": -16,
              }
            }
          >
            <AnimatedCoinConfetti
              coins={2}
              type="challenge-success"
            />
          </View>
          <Image
            source={1}
          />
          <YuText
            bold={true}
            style={
              Object {
                "bottom": 40,
                "color": "rgb(168, 105, 22)",
                "fontSize": 50,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "textAlign": "center",
              }
            }
          >
            6 minutes
          </YuText>
        </View>,
        <View
          style={
            Object {
              "marginTop": 20,
            }
          }
        >
          <YuText
            style={
              Object {
                "color": "rgb(85,85,85)",
                "fontSize": 50,
                "textAlign": "center",
              }
            }
          >
            
          </YuText>
        </View>,
        <Button
          label=""
          onPress={[MockFunction]}
          type="PrimarySmall"
          wrapperStyle={
            Object {
              "marginTop": 100,
            }
          }
        />,
      ],
      "footerImage": null,
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "isLeftHighlighted": true,
          "isMidHighlighted": true,
          "isRightHighlighted": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "bottom": 6,
                  "left": 0,
                  "overflow": "visible",
                  "position": "absolute",
                  "right": 0,
                }
              }
            >
              <LevelLine
                colour="rgb(251, 207, 39)"
              />
            </View>,
            <YuText
              style={
                Object {
                  "color": "rgb(168, 105, 22)",
                  "fontSize": 28,
                  "marginTop": -20,
                  "textAlign": "center",
                }
              }
            >
              level undefined
            </YuText>,
          ],
          "style": Object {
            "alignItems": "center",
            "marginBottom": 40,
            "width": 274,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <LevelLine
                colour="rgb(251, 207, 39)"
              />,
              "style": Object {
                "bottom": 6,
                "left": 0,
                "overflow": "visible",
                "position": "absolute",
                "right": 0,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "colour": "rgb(251, 207, 39)",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "level undefined",
              "style": Object {
                "color": "rgb(168, 105, 22)",
                "fontSize": 28,
                "marginTop": -20,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "level undefined",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "alignItems": "center",
                  "marginBottom": -16,
                }
              }
            >
              <AnimatedCoinConfetti
                coins={2}
                type="challenge-success"
              />
            </View>,
            <Image
              source={1}
            />,
            <YuText
              bold={true}
              style={
                Object {
                  "bottom": 40,
                  "color": "rgb(168, 105, 22)",
                  "fontSize": 50,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "textAlign": "center",
                }
              }
            >
              6 minutes
            </YuText>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <AnimatedCoinConfetti
                coins={2}
                type="challenge-success"
              />,
              "style": Object {
                "alignItems": "center",
                "marginBottom": -16,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "coins": 2,
                "type": "challenge-success",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": 1,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bold": true,
              "children": "6 minutes",
              "style": Object {
                "bottom": 40,
                "color": "rgb(168, 105, 22)",
                "fontSize": 50,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "6 minutes",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <YuText
            style={
              Object {
                "color": "rgb(85,85,85)",
                "fontSize": 50,
                "textAlign": "center",
              }
            }
          >
            
          </YuText>,
          "style": Object {
            "marginTop": 20,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "",
            "style": Object {
              "color": "rgb(85,85,85)",
              "fontSize": 50,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "label": "",
          "onPress": [MockFunction],
          "type": "PrimarySmall",
          "wrapperStyle": Object {
            "marginTop": 100,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Stars
            isLeftHighlighted={true}
            isMidHighlighted={true}
            isRightHighlighted={false}
          />,
          <View
            style={
              Object {
                "alignItems": "center",
                "marginBottom": 40,
                "width": 274,
              }
            }
          >
            <View
              style={
                Object {
                  "bottom": 6,
                  "left": 0,
                  "overflow": "visible",
                  "position": "absolute",
                  "right": 0,
                }
              }
            >
              <LevelLine
                colour="rgb(251, 207, 39)"
              />
            </View>
            <YuText
              style={
                Object {
                  "color": "rgb(168, 105, 22)",
                  "fontSize": 28,
                  "marginTop": -20,
                  "textAlign": "center",
                }
              }
            >
              level undefined
            </YuText>
          </View>,
          <View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "marginBottom": -16,
                }
              }
            >
              <AnimatedCoinConfetti
                coins={2}
                type="challenge-success"
              />
            </View>
            <Image
              source={1}
            />
            <YuText
              bold={true}
              style={
                Object {
                  "bottom": 40,
                  "color": "rgb(168, 105, 22)",
                  "fontSize": 50,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "textAlign": "center",
                }
              }
            >
              6 minutes
            </YuText>
          </View>,
          <View
            style={
              Object {
                "marginTop": 20,
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(85,85,85)",
                  "fontSize": 50,
                  "textAlign": "center",
                }
              }
            >
              
            </YuText>
          </View>,
          <Button
            label=""
            onPress={[MockFunction]}
            type="PrimarySmall"
            wrapperStyle={
              Object {
                "marginTop": 100,
              }
            }
          />,
        ],
        "footerImage": null,
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isLeftHighlighted": true,
            "isMidHighlighted": true,
            "isRightHighlighted": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "bottom": 6,
                    "left": 0,
                    "overflow": "visible",
                    "position": "absolute",
                    "right": 0,
                  }
                }
              >
                <LevelLine
                  colour="rgb(251, 207, 39)"
                />
              </View>,
              <YuText
                style={
                  Object {
                    "color": "rgb(168, 105, 22)",
                    "fontSize": 28,
                    "marginTop": -20,
                    "textAlign": "center",
                  }
                }
              >
                level undefined
              </YuText>,
            ],
            "style": Object {
              "alignItems": "center",
              "marginBottom": 40,
              "width": 274,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <LevelLine
                  colour="rgb(251, 207, 39)"
                />,
                "style": Object {
                  "bottom": 6,
                  "left": 0,
                  "overflow": "visible",
                  "position": "absolute",
                  "right": 0,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "colour": "rgb(251, 207, 39)",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "level undefined",
                "style": Object {
                  "color": "rgb(168, 105, 22)",
                  "fontSize": 28,
                  "marginTop": -20,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "level undefined",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "marginBottom": -16,
                  }
                }
              >
                <AnimatedCoinConfetti
                  coins={2}
                  type="challenge-success"
                />
              </View>,
              <Image
                source={1}
              />,
              <YuText
                bold={true}
                style={
                  Object {
                    "bottom": 40,
                    "color": "rgb(168, 105, 22)",
                    "fontSize": 50,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "textAlign": "center",
                  }
                }
              >
                6 minutes
              </YuText>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <AnimatedCoinConfetti
                  coins={2}
                  type="challenge-success"
                />,
                "style": Object {
                  "alignItems": "center",
                  "marginBottom": -16,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "coins": 2,
                  "type": "challenge-success",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "source": 1,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "6 minutes",
                "style": Object {
                  "bottom": 40,
                  "color": "rgb(168, 105, 22)",
                  "fontSize": 50,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "6 minutes",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              style={
                Object {
                  "color": "rgb(85,85,85)",
                  "fontSize": 50,
                  "textAlign": "center",
                }
              }
            >
              
            </YuText>,
            "style": Object {
              "marginTop": 20,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "",
              "style": Object {
                "color": "rgb(85,85,85)",
                "fontSize": 50,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "",
            "onPress": [MockFunction],
            "type": "PrimarySmall",
            "wrapperStyle": Object {
              "marginTop": 100,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`ChallengeSuccessScreen should render steps as expected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeSuccessScreen
    copy={
      Object {
        "ctaLabel": "",
        "footer": "",
      }
    }
    onPressCta={[MockFunction]}
    rating={2}
    reward={2}
    score={1180}
    unit="steps"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Stars
          isLeftHighlighted={true}
          isMidHighlighted={true}
          isRightHighlighted={false}
        />,
        <View
          style={
            Object {
              "alignItems": "center",
              "marginBottom": 40,
              "width": 274,
            }
          }
        >
          <View
            style={
              Object {
                "bottom": 6,
                "left": 0,
                "overflow": "visible",
                "position": "absolute",
                "right": 0,
              }
            }
          >
            <LevelLine
              colour="rgb(251, 207, 39)"
            />
          </View>
          <YuText
            style={
              Object {
                "color": "rgb(168, 105, 22)",
                "fontSize": 28,
                "marginTop": -20,
                "textAlign": "center",
              }
            }
          >
            level undefined
          </YuText>
        </View>,
        <View>
          <View
            style={
              Object {
                "alignItems": "center",
                "marginBottom": -16,
              }
            }
          >
            <AnimatedCoinConfetti
              coins={2}
              type="challenge-success"
            />
          </View>
          <Image
            source={1}
          />
          <YuText
            bold={true}
            style={
              Object {
                "bottom": 40,
                "color": "rgb(168, 105, 22)",
                "fontSize": 50,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "textAlign": "center",
              }
            }
          >
            1180 steps
          </YuText>
        </View>,
        <View
          style={
            Object {
              "marginTop": 20,
            }
          }
        >
          <YuText
            style={
              Object {
                "color": "rgb(85,85,85)",
                "fontSize": 50,
                "textAlign": "center",
              }
            }
          >
            
          </YuText>
        </View>,
        <Button
          label=""
          onPress={[MockFunction]}
          type="PrimarySmall"
          wrapperStyle={
            Object {
              "marginTop": 100,
            }
          }
        />,
      ],
      "footerImage": null,
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "isLeftHighlighted": true,
          "isMidHighlighted": true,
          "isRightHighlighted": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "bottom": 6,
                  "left": 0,
                  "overflow": "visible",
                  "position": "absolute",
                  "right": 0,
                }
              }
            >
              <LevelLine
                colour="rgb(251, 207, 39)"
              />
            </View>,
            <YuText
              style={
                Object {
                  "color": "rgb(168, 105, 22)",
                  "fontSize": 28,
                  "marginTop": -20,
                  "textAlign": "center",
                }
              }
            >
              level undefined
            </YuText>,
          ],
          "style": Object {
            "alignItems": "center",
            "marginBottom": 40,
            "width": 274,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <LevelLine
                colour="rgb(251, 207, 39)"
              />,
              "style": Object {
                "bottom": 6,
                "left": 0,
                "overflow": "visible",
                "position": "absolute",
                "right": 0,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "colour": "rgb(251, 207, 39)",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "level undefined",
              "style": Object {
                "color": "rgb(168, 105, 22)",
                "fontSize": 28,
                "marginTop": -20,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "level undefined",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "alignItems": "center",
                  "marginBottom": -16,
                }
              }
            >
              <AnimatedCoinConfetti
                coins={2}
                type="challenge-success"
              />
            </View>,
            <Image
              source={1}
            />,
            <YuText
              bold={true}
              style={
                Object {
                  "bottom": 40,
                  "color": "rgb(168, 105, 22)",
                  "fontSize": 50,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "textAlign": "center",
                }
              }
            >
              1180 steps
            </YuText>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <AnimatedCoinConfetti
                coins={2}
                type="challenge-success"
              />,
              "style": Object {
                "alignItems": "center",
                "marginBottom": -16,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "coins": 2,
                "type": "challenge-success",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": 1,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bold": true,
              "children": "1180 steps",
              "style": Object {
                "bottom": 40,
                "color": "rgb(168, 105, 22)",
                "fontSize": 50,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "1180 steps",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <YuText
            style={
              Object {
                "color": "rgb(85,85,85)",
                "fontSize": 50,
                "textAlign": "center",
              }
            }
          >
            
          </YuText>,
          "style": Object {
            "marginTop": 20,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "",
            "style": Object {
              "color": "rgb(85,85,85)",
              "fontSize": 50,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "label": "",
          "onPress": [MockFunction],
          "type": "PrimarySmall",
          "wrapperStyle": Object {
            "marginTop": 100,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Stars
            isLeftHighlighted={true}
            isMidHighlighted={true}
            isRightHighlighted={false}
          />,
          <View
            style={
              Object {
                "alignItems": "center",
                "marginBottom": 40,
                "width": 274,
              }
            }
          >
            <View
              style={
                Object {
                  "bottom": 6,
                  "left": 0,
                  "overflow": "visible",
                  "position": "absolute",
                  "right": 0,
                }
              }
            >
              <LevelLine
                colour="rgb(251, 207, 39)"
              />
            </View>
            <YuText
              style={
                Object {
                  "color": "rgb(168, 105, 22)",
                  "fontSize": 28,
                  "marginTop": -20,
                  "textAlign": "center",
                }
              }
            >
              level undefined
            </YuText>
          </View>,
          <View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "marginBottom": -16,
                }
              }
            >
              <AnimatedCoinConfetti
                coins={2}
                type="challenge-success"
              />
            </View>
            <Image
              source={1}
            />
            <YuText
              bold={true}
              style={
                Object {
                  "bottom": 40,
                  "color": "rgb(168, 105, 22)",
                  "fontSize": 50,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "textAlign": "center",
                }
              }
            >
              1180 steps
            </YuText>
          </View>,
          <View
            style={
              Object {
                "marginTop": 20,
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(85,85,85)",
                  "fontSize": 50,
                  "textAlign": "center",
                }
              }
            >
              
            </YuText>
          </View>,
          <Button
            label=""
            onPress={[MockFunction]}
            type="PrimarySmall"
            wrapperStyle={
              Object {
                "marginTop": 100,
              }
            }
          />,
        ],
        "footerImage": null,
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isLeftHighlighted": true,
            "isMidHighlighted": true,
            "isRightHighlighted": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "bottom": 6,
                    "left": 0,
                    "overflow": "visible",
                    "position": "absolute",
                    "right": 0,
                  }
                }
              >
                <LevelLine
                  colour="rgb(251, 207, 39)"
                />
              </View>,
              <YuText
                style={
                  Object {
                    "color": "rgb(168, 105, 22)",
                    "fontSize": 28,
                    "marginTop": -20,
                    "textAlign": "center",
                  }
                }
              >
                level undefined
              </YuText>,
            ],
            "style": Object {
              "alignItems": "center",
              "marginBottom": 40,
              "width": 274,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <LevelLine
                  colour="rgb(251, 207, 39)"
                />,
                "style": Object {
                  "bottom": 6,
                  "left": 0,
                  "overflow": "visible",
                  "position": "absolute",
                  "right": 0,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "colour": "rgb(251, 207, 39)",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "level undefined",
                "style": Object {
                  "color": "rgb(168, 105, 22)",
                  "fontSize": 28,
                  "marginTop": -20,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "level undefined",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "marginBottom": -16,
                  }
                }
              >
                <AnimatedCoinConfetti
                  coins={2}
                  type="challenge-success"
                />
              </View>,
              <Image
                source={1}
              />,
              <YuText
                bold={true}
                style={
                  Object {
                    "bottom": 40,
                    "color": "rgb(168, 105, 22)",
                    "fontSize": 50,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "textAlign": "center",
                  }
                }
              >
                1180 steps
              </YuText>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <AnimatedCoinConfetti
                  coins={2}
                  type="challenge-success"
                />,
                "style": Object {
                  "alignItems": "center",
                  "marginBottom": -16,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "coins": 2,
                  "type": "challenge-success",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "source": 1,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "1180 steps",
                "style": Object {
                  "bottom": 40,
                  "color": "rgb(168, 105, 22)",
                  "fontSize": 50,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "1180 steps",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              style={
                Object {
                  "color": "rgb(85,85,85)",
                  "fontSize": 50,
                  "textAlign": "center",
                }
              }
            >
              
            </YuText>,
            "style": Object {
              "marginTop": 20,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "",
              "style": Object {
                "color": "rgb(85,85,85)",
                "fontSize": 50,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "",
            "onPress": [MockFunction],
            "type": "PrimarySmall",
            "wrapperStyle": Object {
              "marginTop": 100,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
